# chutes-api

./: .gitignore  Dockerfile  Makefile  balance_refresher.py  chute_autoscaler.py  pyproject.toml  watchtower.py
api/: constants.py  exceptions.py  gpu.py  main.py  metasync.py  permissions.py  util.py
api/chute/: response.py  router.py  schemas.py  util.py
api/config/: __init__.py
api/database/: orms.py
api/image/: forge.py
api/instance/: router.py  schemas.py  util.py
api/invocation/: router.py
api/migrations/: 20250829115200_instance_billing.sql  20250903081317_ia_billing_trigger_updates.sql
api/miner/: router.py
api/node/: schemas.py
api/server/: exceptions.py  quote.py  router.py  schemas.py  service.py  util.py
api/user/: response.py  router.py  schemas.py
charts/: values.yaml
charts/templates/: _helpers.tpl  balance-refresher-cronjob.yaml  forge-deployment.yaml
docker/: docker-compose.yaml
makefiles/: development.mk  lint.mk
metasync/: config.py  constants.py  set_weights_on_metagraph.py  shared.py  sync_metagraph.py
nv-attest/: Makefile  pyproject.toml
nv-attest/chutes_nvattest/: cli.py  verifier.py
nv-attest/docker/: Dockerfile
nv-attest/makefiles/: development.mk  lint.mk  local.mk  test.mk
nv-attest/tests/assets/: evidence.json
nv-attest/tests/integration/: test_verifier.py
tests/: conftest.py
tests/docker/: Dockerfile.db-init
tests/fixtures/: gpus.py  tdx.py
tests/integration/: test_cosign.py  test_server_attestations.py
tests/scripts/: init_db.py  setup-cosign.sh
tests/unit/: test_server_service.py  test_server_utils.py
